# scanql

./: .clang-format  .gitignore  README.md  meson.build
doc/: Programmablaufdiagramm.mmd  Projektantrag.odt  Testskripte.txt  Wochen Planung 26.01.2026 bis 30.01.2026.odt
scripts/: arg-test.sh  format-code.sh
sql/: invalid.sql  valid.sql
src/: a.out  main.c  meson.build  sql-string-list.c  sql-string-list.h  sql-string.c  sql-string.h  sql-symbols.h  sql-token-expected.h  sql-token-stack.c  sql-token-stack.h  sql-token.c  sql-token.h  sql-validate-report.c  sql-validate-report.h  sql-validate.c  sql-validate.h  sqlstring.c  sqlstring.h  sqlstringlist.c  sqlstringlist.h  sqltoken.h  tokenizer.c  tokenizer.h
tests/: meson.build  test_asserts.h  test_sqlstring.c  test_sqlstringlist.c  test_sqltoken_stack.c  test_sqlvalidate.c  test_sqlvalidate_report.c  test_tokenizer.c
